reduced size of sequence diagrams

--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -95,10 +95,10 @@ workspace whose primary purpose is word-processing and web browsing.
 %MDFRAMED%\begin{mdframed}
     \subsubsection{Host match}
     \begin{description}
-        \item[Entry conditions] Internet connection
+        \item[Entry conditions] Internet connection.
         \item[Exit conditions] Will return to game menu. All players
-            disconnected or all puzzled have been solved
-        \item[Participating Actors] Online player and local player
+            disconnected or all puzzled have been solved.
+        \item[Participating Actors] Online player and local player.
         \item[Flow of events]:
             \begin{enumerate}
                 \item The user presses the appropriate menu button.
@@ -128,8 +128,8 @@ workspace whose primary purpose is word-processing and web browsing.
         \item[Entry conditions] Internet connection. The menu must be present.
         \item[Exit conditions]
         \item[Exit conditions] Will return to game menu. All players
-            disconnected or all puzzled have been solved
-        \item[Participating Actors] Online player and local player
+            disconnected or all puzzled have been solved.
+        \item[Participating Actors] Online player and local player.
         \item[Flow of events]:
             \begin{enumerate}
                 \item The user presses the appropriate menu button.
@@ -153,7 +153,7 @@ workspace whose primary purpose is word-processing and web browsing.
         \item[Entry conditions] Menu must be present.
         \item[Exit conditions] Will return to game menu. Puzzle has been
             solved.
-        \item[Participating Actors] Local player
+        \item[Participating Actors] Local player.
         \item[Flow of events]:
             \begin{enumerate}
                 \item User selects the appropriate menu button.
@@ -177,7 +177,7 @@ workspace whose primary purpose is word-processing and web browsing.
             must be activated.
         \item[Exit conditions] Will return to game menu. The puzzle may be
             saved to the disk.
-        \item[Participating Actors] Online player or local player
+        \item[Participating Actors] Online player or local player.
         \item[Flow of events]:
             \begin{enumerate}
                 \item The user navigates the puzzle
@@ -187,7 +187,6 @@ workspace whose primary purpose is word-processing and web browsing.
                 \item The user may change properties of the block using this
                     screen.
                 \item Blocks may be added or removed using this same screen.
-                \item
             \end{enumerate}
             Puzzle preview:
             \begin{enumerate}
@@ -212,7 +211,7 @@ workspace whose primary purpose is word-processing and web browsing.
         \item[Exit conditions] Will return to game menu or puzzle editor.
             If the game is over, an overview of results will be shown and the
             steps taken to solve the puzzle may be saved to the disk.
-        \item[Participating Actors] Online player or local player
+        \item[Participating Actors] Online player or local player.
         \item[Flow of events]:
             \begin{enumerate}
                 \item The user navigates the puzzle
@@ -240,7 +239,7 @@ workspace whose primary purpose is word-processing and web browsing.
         \item[Exit conditions] The game must offer continuous feedback.
             If the entry conditions are met, any further input must be
             acted on as soon as possible.
-        \item[Participating Actors] Online player and local player
+        \item[Participating Actors] Online player and local player.
         \item[Flow of events]:
             Camera motion.
             \begin{enumerate}
@@ -273,7 +272,7 @@ workspace whose primary purpose is word-processing and web browsing.
         \item[Entry conditions] Game must be running. This action is
             asynchronous and may activate at any point.
         \item[Exit conditions] Game, be gone!
-        \item[Participating Actors] Local player
+        \item[Participating Actors] Local player.
         \item[Flow of events]:
             \begin{enumerate}
                 \item User presses the quit button on a menu
@@ -287,16 +286,11 @@ workspace whose primary purpose is word-processing and web browsing.
 
 
 % reqs analysis
-%\section{Requirements Analysis}\label{reqs-analysis-BC}
-
-%\subsection{Scope and Objectives}
-
-%\subsection{Supplementary Requirements}
-
-% reqs analysis
 \section{Requirements Analysis}
 
 \subsection{Structural Analysis}\label{struct-analysis-BC}
+% Briefly describe each analysis class (organized according to type - boundary,
+% control, and entity) and class diagrams
 
 \subsection{Behavioral Analysis}\label{behavioral-analysis-HR}
 
