--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -21,7 +21,7 @@
 %\end{abstract}
 % overview
 \section{Project Overview}\label{overview-SM}
-Anttris is designed to be a game that offers both creative freedom and a competitive edge. The game revolves around solving puzzle cubes which are composed of different types of blocks. Each block has a special property allowing for sophisticated puzzles to be created. Players can solve the puzzle cubes by interacting with these blocks in many ways, such as by removing blocks or setting off massive chain reactions.
+Anttris is designed to be a game that offers both creative freedom and fierce competition. The game revolves around solving puzzle cubes which are composed of different types of blocks. Each block has a special property allowing for sophisticated puzzles to be created. Players can solve the puzzle cubes by interacting with these blocks in many ways, such as by removing blocks or setting off massive chain reactions.
 
 Anttris will include two different game-mode categories: competitive game modes, and single-player game modes. Single-player game modes will focus on clearing puzzle cubes with emphasis placed on efficiency of the solution or solution time. Competitive game modes shift the focus to solving cubes faster than an opponent.
 
