Moved the breakdown of team member assignments to its own section (5.2)

--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -420,8 +420,8 @@ Issues & None & Spring Break! & \specialcell{Deficiencies\\in design} & None & N
 \label{timeline}
 \end{table}
 
-\clearpage
-
+%\clearpage
+\subsection{Task Assignments by Team Member}
 We have also assigned ourselves various tasks involved in the completion of the project. Included below is a table denoting our current assignments.
 
     \begin{figure}[H]
