--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -444,7 +444,7 @@ We have also assigned ourselves various tasks involved in the completion of the 
         \caption{Current team member assignments. This is subject to change.}
     \end{figure}
 
-\bibliographystyle{abbrv}
+\bibliographystyle{acm}
 \bibliography{team5-requirements-spec}
 \end{document}
 
