--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -435,7 +435,7 @@ Our team also has solid organization and collaboration thanks to various tools, 
 \end{table}
 
 %\clearpage
-\subsection{Task Assignments by Team Member}
+\subsection{Task Assignments by Team Member}\label{assignments}
 We have also assigned ourselves various tasks involved in the completion of the project. Included below is a table denoting our current assignments.
 
     \begin{figure}[H]
