--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -401,7 +401,10 @@ The user interface in Anttris will follow the design of most simple game interfa
 
 % validation and criteria
 \section{Validation and Criteria}\label{validation-BC}
-
+ Since we are crating an interactive puzzle game, we will be using the Black Box Testing method in order to test all the buttons, features, and interactions with the puzzle to make sure that all of the functions preform properly. 
+ Testing these functions from a user perspective versus a coding perspective is very important since our game will be interacting with multiple blocks and functions of the game at one time. 
+ After we complete the user end, we will use the White Box Testing method in order to test the code and pass parameters to each of the functions to ensure that our connections between players and the code itself is working properly. 
+ We will know that we have satisfied a use case, when we know that each of the features and interactions between the different actors work properly.
 % appendices
 \section{Appendices}
 
