--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -5,7 +5,7 @@
 \usepackage{float} % for [H] anchoring method
 \usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
 \graphicspath{ {pngs/} }
-%MDFRAMED%\usepackage{mdframed}
+\usepackage{mdframed}
 
 \newcommand{\specialcell}[2][c]{%
 	\begin{tabular}[#1]{@{}c@{}}#2\end{tabular}}
@@ -91,7 +91,7 @@ workspace whose primary purpose is word-processing and web browsing.
     \end{description}
 
 \subsection{Use-case Descriptions}
-%MDFRAMED%\begin{mdframed}
+\begin{mdframed}
     \subsubsection{Host match}
     \begin{description}
         \item[Entry conditions] Internet connection.
@@ -119,9 +119,9 @@ workspace whose primary purpose is word-processing and web browsing.
 
             \end{enumerate}
     \end{description}
-%MDFRAMED%\end{mdframed}
+\end{mdframed}
 
-%MDFRAMED%\begin{mdframed}
+\begin{mdframed}
     \subsubsection{Join match}
     \begin{description}
         \item[Entry conditions] Internet connection. The menu must be present.
@@ -143,10 +143,10 @@ workspace whose primary purpose is word-processing and web browsing.
                     progress of online players.
             \end{enumerate}
     \end{description}
-%MDFRAMED%\end{mdframed}
+\end{mdframed}
 
 
-%MDFRAMED%\begin{mdframed}
+\begin{mdframed}
     \subsubsection{Offline game}
     \begin{description}
         \item[Entry conditions] Menu must be present.
@@ -164,10 +164,10 @@ workspace whose primary purpose is word-processing and web browsing.
                     Scene.
             \end{enumerate}
     \end{description}
-%MDFRAMED%\end{mdframed}
+\end{mdframed}
 
 
-%MDFRAMED%\begin{mdframed}
+\begin{mdframed}
     This use case includes the Host Match, Join Match and Offline Game
     use cases.
     \subsubsection{Edit puzzle}
@@ -197,10 +197,10 @@ workspace whose primary purpose is word-processing and web browsing.
                     returning to the editing scene
             \end{enumerate}
     \end{description}
-%MDFRAMED%\end{mdframed}
+\end{mdframed}
 
 
-%MDFRAMED%\begin{mdframed}
+\begin{mdframed}
     This use case includes the Host Match, Join Match and Offline Game
     use cases.
     \subsubsection{Solve puzzle}
@@ -226,10 +226,10 @@ workspace whose primary purpose is word-processing and web browsing.
                     with any moves made by other players.
             \end{enumerate}
     \end{description}
-%MDFRAMED%\end{mdframed}
+\end{mdframed}
 
 
-%MDFRAMED%\begin{mdframed}
+\begin{mdframed}
     \subsubsection{Navigate puzzle}
     This use case includes the Solve puzzle and Edit puzzle use cases.
     \begin{description}
@@ -262,10 +262,10 @@ workspace whose primary purpose is word-processing and web browsing.
             \end{enumerate}
 
     \end{description}
-%MDFRAMED%\end{mdframed}
+\end{mdframed}
 
 
-%MDFRAMED%\begin{mdframed}
+\begin{mdframed}
     \subsubsection{Quit}
     \begin{description}
         \item[Entry conditions] Game must be running. This action is
@@ -280,7 +280,7 @@ workspace whose primary purpose is word-processing and web browsing.
                 \item The program shuts down gracefully.
             \end{enumerate}
     \end{description}
-%MDFRAMED%\end{mdframed}
+\end{mdframed}
 
 
 
