remove extraneous table line

--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -430,7 +430,7 @@ Our team also has solid organization and collaboration thanks to various tools, 
 {\bf Date} & 2/18 - 3/6 & 3/9 - 3/21 & 3/23 - 4/3 & 4/6 - 4/17 & 4/21 - end \\ \hline
 {\bf Goals} & Prototype & Get game working & Polish game & \specialcell{Advanced\\features} & \specialcell{Advanced\\features} \\ \hline
 {\bf Issues} & None & Spring Break! & \specialcell{Deficiencies\\in design} & None & None \\ \hline
- &  &  &  &  &  \\ \hline
+% &  &  &  &  &  \\ \hline
 \end{tabular}
 \caption{Scrum Timeline}
 \label{timeline}
