--- a/team5-requirements-spec.tex
+++ b/team5-requirements-spec.tex
@@ -291,7 +291,7 @@ workspace whose primary purpose is word-processing and web browsing.
 % Briefly describe each analysis class (organized according to type - boundary,
 % control, and entity) and class diagrams
 \subsubsection{Boundary Objects}
-Boundary objects are those that the user will be using directly through the user interface. These objects are responsible for displaying the correct display to the user and 
+Boundary objects are those that the user will be using directly through the user interface. These objects are responsible for displaying the correct buttons for the user and directing the player to the type of game play they selected.
 
 \begin{enumerate}
 \item {\bf Host Match Button.} This object is used by the user through 
